/**
 *
 * @author drozd
 */
public interface Notifiable 
{
    public void notify(String message);
}
